--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <link rel="stylesheet" href="styles.css">
 
 
-  
+
 </head>
 
 <body>
+  <h1 id="game-title">SIMON</h1>
   <h1 id="level-title">Press button to Start</h1>
 
 
